hadiah untuk pramilia

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <img src="ber.gif" alt="" sizes="100px" srcset="">
         <a href="https://smallpdf.com/shared#st=589ff624-2810-406d-85ac-1f7f07515aa8&fn=surat+teman.docx&ct=1616922307056&tl=share-document&rf=link"><h2>Klik Disini Ya!</h2></a>
+        <audio src="lagu.mp3" loop autoplay ></audio>
     </body>
 </html>
